force-app/main/default/objects/Resume__c/Resume__c.object-meta.xml
<CustomObject>
    <label>Resume</label>
    <nameField>
        <displayFormat>Resume-{0000}</displayFormat>
        <label>Resume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>