force-app/main/default/objects/Resume__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>