force-app/main/default/objects/Resume__c/fields/Currently_Employed__c.field-meta.xml
<CustomField>
    <fullName>Currently_Employed__c</fullName>
    <formula>IF(TEXT(Status__c) == &#39;Employed&#39;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently Employed</label>
    <type>Checkbox</type>
</CustomField>