force-app/main/default/objects/Resume__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>RIGHT(Full_Name__c, LEN(Full_Name__c) - FIND(&quot; &quot;, Full_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>