force-app/main/default/objects/Resume__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <label>Photo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>