force-app/main/default/objects/Resume__c/fields/Photo_Code__c.field-meta.xml
<CustomField>
    <fullName>Photo_Code__c</fullName>
    <label>Photo Code</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>