force-app/main/default/objects/Resume__c/fields/Photo_PathOnClient__c.field-meta.xml
<CustomField>
    <fullName>Photo_PathOnClient__c</fullName>
    <label>Photo PathOnClient</label>
    <length>150</length>
    <type>Text</type>
</CustomField>