force-app/main/default/objects/Resume__c/fields/Photo_Title__c.field-meta.xml
<CustomField>
    <fullName>Photo_Title__c</fullName>
    <label>Photo Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>