force-app/main/default/objects/Resume__c/fields/PhotoContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>PhotoContentDocumentId__c</fullName>
    <label>PhotoContentDocumentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>