force-app/main/default/objects/Resume__c/fields/Position_ID__c.field-meta.xml
<CustomField>
    <fullName>Position_ID__c</fullName>
    <defaultValue>&quot;text&quot;</defaultValue>
    <label>Position ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>