force-app/main/default/objects/Resume__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>